# spec-service

./: ARC42.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml  rust-ci.yml
docs/: architecture-diagrams.puml  generate-diagrams.sh
spec-server/: Cargo.toml  build.rs  demo-rest-api.sh  test-api.sh  test-grpc.sh  test_grpc.py  test_spec.db
spec-server/proto/: spec.proto
spec-server/src/: lib.rs  main.rs
spec-server/src/api/: grpc.rs  rest.rs
spec-server/src/domain/: aggregates.rs  commands.rs  errors.rs  events.rs  mod.rs  value_objects.rs
spec-server/src/examples/: basic_workflow.rs  projection_example.rs
spec-server/src/infrastructure/: event_processor.rs  event_store.rs  mod.rs  projections.rs  repositories.rs
