[package]
name = "spec-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "spec-server"
path = "src/main.rs"

[[example]]
name = "basic_workflow"
path = "src/examples/basic_workflow.rs"

[[example]]
name = "projection_example"
path = "src/examples/projection_example.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = "1.0"
sqlx = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.13"
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional dependencies
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tonic-build = "0.13"
anyhow = "1.0"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3.13"