[package]
name = "spec-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Event-sourced service for managing YAML specification lifecycle"
readme = "../README.md"
repository = "https://github.com/navicore/spec-service"
keywords = ["event-sourcing", "yaml", "specification", "grpc", "rest"]
categories = ["web-programming", "database"]

[[bin]]
name = "spec-server"
path = "src/main.rs"

[[example]]
name = "basic_workflow"
path = "src/examples/basic_workflow.rs"

[[example]]
name = "projection_example"
path = "src/examples/projection_example.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Database
sqlx = { workspace = true }

# Web frameworks
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Error handling and utilities
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenv = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }